0.9.0 - 20090414
    - Anderson Lizardo <anderson.lizardo@indt.org.br>
      - Update API (now covering most of maemo 5 alpha API)
      - Rewrite setup.py
      - Lots of cleanups
      - Improve unit tests (cover all hand-written override code)
      - Automate update of .defs with hildon_gen_defs.sh script

0.8.9 - ???
???

0.8.8 - 20060913
    - Luciano Miguel Wolf <luciano.wolf@indt.org.br>
      - Fixed messages print format inside setup.py
      - Applied patch for bug#725 - Author: Jan Arne Petersen <maemo@jpetersen.org>

0.8.7 - 20060905
    - Luciano Miguel Wolf <luciano.wolf@indt.org.br>
      - Employed new build system based on distutils
        - Removed configure.in, Makefile.am
        - Added setup.py

0.8.6 - 20060606
    - Osvaldo Santana Neto <osvaldo.santana@indt.org.br>
      - Added hildon-base-lib dependencies to build this package

0.8.6 - 20060606
    - Osvaldo Santana Neto <osvaldo.santana@indt.org.br>
      - Added hildon-base-lib dependencies to build this package

0.8.5 - 20060531
    - Daniel d'Andrada T. de Carvalho <daniel.carvalho@indt.org.br>
      - Fixed build system. It now correctly checks for hildon-libs, hildon-fm and pygtk.

0.8.5 - 20060531
    - Daniel d'Andrada T. de Carvalho <daniel.carvalho@indt.org.br>
      - Wiping out hildon-insert-object-dialog binding, as it was removed from hildon-libs.

0.8.4 - 20060502
    - Daniel d'Andrada T. de Carvalho <daniel.carvalho@indt.org.br>
      - Improved hildon.GridItem constructor.

0.8.3 - 20060428
    - Daniel d'Andrada T. de Carvalho <daniel.carvalho@indt.org.br>
      - Fixed bindings for: hildon_weekday_picker_unset_day, hildon_weekday_picker_toggle_day and hildon_weekday_picker_isset_day.
      - Improved test for hildon.WeekdayPicker in ./examples/hildon-test.py

0.8.2 - 20060428
    - Daniel d'Andrada T. de Carvalho <daniel.carvalho@indt.org.br>
      - Removed binding for deprecated methods in HildonTimeEditor.