@@ -1,4 +1,6 @@
 0.9.0 - 20090414
+    - Renato Araujo Oliveira Filho <renato.filho@openbossa.org.br>
+      - Created override for function hildon_program_get_instance
     - Anderson Lizardo <anderson.lizardo@indt.org.br>
       - Update API (now covering most of maemo 5 alpha API)
       - Rewrite setup.py
